<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_dialog"

        android:layoutDirection="rtl">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/order_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/markazi"
                android:text="@string/order"
                android:textColor="@color/white_100"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cancel_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="343dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/markazi"
                android:src="@drawable/close"
                android:textColor="@color/black_50"
                android:textSize="24sp"
                android:textStyle="bold"
                android:contentDescription="@string/cancel" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEdTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_edit_text"
            android:hint="@string/name"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEdT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEdTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/corner_edit_text"
            android:hint="@string/phone"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEdTLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEdT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carNumberEdTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/corner_edit_text"
            android:hint="@string/car_number"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEdTLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carNumberEdT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carTypeEdTLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/corner_edit_text"
            android:hint="@string/car_model"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carNumberEdTLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carTypeEdT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
