<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignUp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:hint="@string/confirm_password"
            android:maxWidth="@dimen/custom_max_width"
            android:minWidth="@dimen/custom_min_width"
            android:paddingTop="3dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-7dp"
                android:backgroundTint="#D5D6D6"
                android:inputType="textVisiblePassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black_100"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>